# lets_CG

./: .gitignore  .gitmodules  CMakeLists.txt  FindResources.cmake  FindShaders.cmake  Makefile  README.md  notes.md  readme.md
3d_geom/: CMakeLists.txt
3d_geom/shaders/: 3d_geom.vs
OpenGL/: CMakeLists.txt  FindResources.cmake  README.md
OpenGL/3d_geom/: CMakeLists.txt  main.cpp
OpenGL/cube_texture/: CMakeLists.txt  main.cpp
OpenGL/cube_texture/shaders/: cube_texture.vs
OpenGL/glyk/: CMakeLists.txt
OpenGL/glyk/include/glyk/: image.h  light.h  loader.h  mat4x4.h  mesh.h  object3d.h  scene.h  shader.h
OpenGL/glyk/shaders/: axes_indicator.vs  icon_indicator.fs  standard.vs
OpenGL/glyk/src/: material.cpp  scene.cpp  window.cpp
OpenGL/lighting/: CMakeLists.txt  main.cpp
OpenGL/math_test/: CMakeLists.txt
cube_texture/: CMakeLists.txt  main.cpp
global_illumination/: README.md
global_illumination/head/: camera.hpp  integrator.hpp  interaction.hpp  material.hpp  mathext.hpp  scene.hpp  shape.hpp  triangleMesh.hpp
global_illumination/test/: transform.cpp
glyk/: CMakeLists.txt  README.md
glyk/include/glyk/: camera.h  geometry.h  glm_debug.h  image.h  indicator.h  invisibleobject3d.h  light.h  loader.h  material.h  mesh.h  object3d.h  scene.h  shader.h  texture.h  vec3.h  window.h
glyk/shaders/: axes_indicator.fs  axes_indicator.vs  icon_indicator.vs  standard.fs  standard.vs
glyk/src/: camera.cpp  geometry.cpp  image.cpp  indicator.cpp  invisibleobject3d.cpp  light.cpp  loader.cpp  material.cpp  mesh.cpp  object3d.cpp  scene.cpp  shader.cpp  texture.cpp  window.cpp
head/: aabb.hpp  camera.hpp  config.hpp  film.hpp  integrator.hpp  interaction.hpp  light.hpp  material.hpp  mathext.hpp  objloader.hpp  parallelogram.hpp  pathTracingIntegrator.hpp  ray.hpp  scene.hpp  shape.hpp  triangleMesh.hpp
lighting/: main.cpp
loop_subdivision/: .gitignore  CMakeLists.txt  README.md
loop_subdivision/head/: refine.hpp  triangleMesh.hpp
loop_subdivision/src/: main.cpp
math_test/: main.cpp
model_texture/: CMakeLists.txt  main.cpp
src/: 3d_geom.cpp  cube_texture.cpp  gl_header_files.h  image.h  lighting.cpp  loader.cpp  loader.h  main.cpp  mat4x4.h  math_test.cpp  shader.cpp  shader.h  texture.cpp  triangle.cpp  vec3.h  window.h
src/shaders/: 3d_geom.fs  cube_texture.fs  lighting.fs  lighting.vs  texture.fs  triangle.fs  triangle.vs
src/utils/: camera.cpp  camera.h  displayobject.cpp  displayobject.h  geometry.cpp  geometry.h  image.h  light.cpp  light.h  mat4x4.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h  vec3.h  window.cpp  window.h
test/: disk_sample.cpp  transform.cpp
texture/: CMakeLists.txt  main.cpp
texture/shaders/: texture.vs
triangle/: CMakeLists.txt  main.cpp
volume_rendering/: CMakeLists.txt  README.md
volume_rendering/head/: aabb.hpp  film.hpp  ray.hpp
volume_rendering/src/: interpolator.h  main.cpp  opticsData.cpp  renderer.h  volume.h
volume_rendering_cpu/head/: camera.hpp  config.hpp  light.hpp  sampler.hpp
volume_rendering_cpu/src/: classifier.h  compositor.cpp  compositor.h  opticsData.h  renderer.cpp  volume.cpp  volumeData.h  voxel.h
